Created first project page.

--- a/css/style.scss
+++ b/css/style.scss
@@ -35,3 +35,11 @@
 #project-status-attn:after {
   content: 'Attention';
 }
+
+#view-project:after {
+  content: 'View Project';
+}
+
+#user-img{
+    margin: 0 auto;
+}
