--- a/css/style.scss
+++ b/css/style.scss
@@ -67,6 +67,10 @@
   color: #01367a !important;
 }
 
+input[type=search]:focus+label {
+  color: #01367a !important;
+}
+
 .input-field input[type=email]:focus+label {
   color: #01367a !important;
 }
@@ -80,6 +84,11 @@
 }
 
 .input-field input[type=text]:focus {
+  border-bottom: 1px solid #01367a !important;
+  box-shadow: 0 1px 0 0 #01367a !important;
+}
+
+input[type=search]:focus {
   border-bottom: 1px solid #01367a !important;
   box-shadow: 0 1px 0 0 #01367a !important;
 }
@@ -111,3 +120,4 @@
 .dropdown-content li>span {
   color: black !important;
 }
+
