--- a/css/style.scss
+++ b/css/style.scss
@@ -54,6 +54,36 @@
   background-color: #01367a;
 }
 
+.dataTables_wrapper .dataTables_paginate .paginate_button.current,
+.dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
+  color: white !important;
+  background: transparent !important;
+  background-color: #01367a !important;
+  border: 0px !important;
+  border-radius: 50% !important;
+}
+
+.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
+  color: white !important;
+  background: transparent !important;
+  background-color: #01367a !important;
+  border: 0px !important;
+  border-radius: 50% !important;
+}
+
+#submittal-table_previous:hover {
+  color: #dadce0 !important;
+  background: transparent !important;
+  background-color: transparent !important;
+  
+}
+
+#submittal-table_next:hover {
+  color: #dadce0 !important;
+  background: transparent !important;
+  background-color: transparent !important;
+}
+
 .btn-itc-blue:hover {
   background-color: #01367a;
 }
@@ -103,16 +133,18 @@ input[type=search]:focus {
   box-shadow: 0 1px 0 0 #01367a !important;
 }
 
-[type="radio"]:checked + span:before {
+[type="radio"]:checked+span:before {
   border: 2px solid #01367a !important;
 }
 
-[type="radio"]:checked + span:after,
-[type="radio"].with-gap:checked + span:after {
+[type="radio"]:checked+span:after,
+[type="radio"].with-gap:checked+span:after {
   background-color: #01367a !important;
 }
 
-[type="radio"]:checked+span:after, [type="radio"].with-gap:checked+span:before, [type="radio"].with-gap:checked+span:after {
+[type="radio"]:checked+span:after,
+[type="radio"].with-gap:checked+span:before,
+[type="radio"].with-gap:checked+span:after {
   border: 2px solid #01367a !important;
 }
 
@@ -120,4 +152,3 @@ input[type=search]:focus {
 .dropdown-content li>span {
   color: black !important;
 }
-
