--- a/css/style.scss
+++ b/css/style.scss
@@ -33,6 +33,10 @@
   white-space: pre !important;
 }
 
+.itc-blue {
+  color: #01367a;
+}
+
 table.dataTable.dtr-inline.collapsed>tbody>tr>td:first-child:before,
 table.dataTable.dtr-inline.collapsed>tbody>tr>th:first-child:before {
   top: 8px;
